Update Dynamic Node tree

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,8 +32,9 @@
     <h1>Welcome to Search App</h1>
     <div class="links-container">
         <a href="barchart.html">0</a><br />
-        <a href="g.html">1</a><br />
-        <a href="graph.html">2</a><br />
+        <a href="graph1.html">1</a><br />
+        <a href="graph2.html">2</a><br />
+        <a href="graph3Node.html">3</a><br />
     </div>
 </body>
 
